--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,14 @@
 body {
   overflow: hidden;
   margin: 0;
-  font-family: "Play", "Oswald", "Kosugi Maru", "Fjalla One", "Baloo Thambi 2",
-    "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif, "Do Hyeon";
+  font-family: "Noto Sans KR", "Sunflower", "Play", "Oswald", "Kosugi Maru",
+    "Fjalla One", "Baloo Thambi 2", "Noto Sans SC", -apple-system,
+    BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif, "Do Hyeon";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Sunflower:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
